Fix collapsing margins of cta

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -243,9 +243,3 @@ button {
     border: 5px solid #3882F6;
     border-radius: 25px;
 }
-
-
-.cta-section {
-    margin-top: auto;
-    margin-bottom: auto;
-}
